fix: make library dependencies public

--- a/externals/binc/CMakeLists.txt
+++ b/externals/binc/CMakeLists.txt
@@ -21,34 +21,20 @@ set(SOURCE_FILES
         )
 
 # Create a static library `binc`
-add_library(binc STATIC ${SOURCE_FILES})
+add_library(binc ${SOURCE_FILES})
 
-# Include directories for binc and for GLib/GIO
+# For binc CMakeLists.txt
+# Use INTERFACE or PUBLIC if the PUBLIC directories should be available to the targets that link against binc
 target_include_directories(binc PUBLIC
-        ${CMAKE_CURRENT_SOURCE_DIR}
         ${GLIB_INCLUDE_DIRS}
         ${GIO_INCLUDE_DIRS}
         )
 
-# Link binc with GLib and GIO
-target_link_libraries(binc
-        ${GLIB_LIBRARIES}
-        ${GIO_LIBRARIES}
-        )
-
-# Since pkg_check_modules defines variables with -I and -L flags,
-# ensure the compiler knows where to find the GLib/GIO headers and libraries
-link_directories(
-        ${GLIB_LIBRARY_DIRS}
-        ${GIO_LIBRARY_DIRS}
-)
-
-# Add GLib and GIO compile flags to the binc target
-# This can include preprocessor definitions, optimizations, etc.
+# Same for compile options, use INTERFACE or PUBLIC as needed
 if(GLIB_CFLAGS_OTHER)
-    set_target_properties(binc PROPERTIES COMPILE_OPTIONS "${GLIB_CFLAGS_OTHER}")
+    target_compile_options(binc PUBLIC ${GLIB_CFLAGS_OTHER})
 endif()
 
 if(GIO_CFLAGS_OTHER)
-    target_compile_options(binc PRIVATE ${GIO_CFLAGS_OTHER})
+    target_compile_options(binc PUBLIC ${GIO_CFLAGS_OTHER})
 endif()
