refactor: clean up

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,4 @@
+# Root CMakeLists.txt remains the same as you provided last:
 cmake_minimum_required(VERSION 3.24)
 project(binc_cmake_example)
 
@@ -8,8 +9,5 @@ add_executable(binc_cmake_example main.cpp)
 # Add the external library
 add_subdirectory(externals/binc)
 
-# Include directories from the external library
-include_directories(externals/binc)
-
 # Link your executable with the external library
-target_link_libraries(binc_cmake_example binc)
+target_link_libraries(binc_cmake_example PRIVATE binc)
