--- a/externals/binc/CMakeLists.txt
+++ b/externals/binc/CMakeLists.txt
@@ -1,9 +1,12 @@
+cmake_minimum_required(VERSION 3.10) # Ensure compatibility with the features used
+project(binc)
+
 # Find pkg-config first
 find_package(PkgConfig REQUIRED)
 
-# Use pkg-config to find glib-2.0 and gio-2.0
-pkg_check_modules(GLIB REQUIRED glib-2.0)
-pkg_check_modules(GIO REQUIRED gio-2.0)
+# Use pkg-config to find glib-2.0 and gio-2.0 and import them as targets
+pkg_check_modules(GLIB REQUIRED IMPORTED_TARGET glib-2.0)
+pkg_check_modules(GIO REQUIRED IMPORTED_TARGET gio-2.0)
 
 # List all source files here
 set(SOURCE_FILES
@@ -21,16 +24,26 @@ set(SOURCE_FILES
         )
 
 # Create a static library `binc`
-add_library(binc ${SOURCE_FILES})
+add_library(binc STATIC ${SOURCE_FILES})
 
-# For binc CMakeLists.txt
-# Use INTERFACE or PUBLIC if the PUBLIC directories should be available to the targets that link against binc
+# Use INTERFACE or PUBLIC to make the include directories and compile options
+# available to targets that link against `binc`
 target_include_directories(binc PUBLIC
         ${GLIB_INCLUDE_DIRS}
         ${GIO_INCLUDE_DIRS}
+        # If binc has its own headers, you should also include its directory here
         )
 
-# Same for compile options, use INTERFACE or PUBLIC as needed
+# Link `binc` with GLib and GIO using imported targets. Use PUBLIC to ensure that
+# anything linking to `binc` also links to these libraries.
+target_link_libraries(binc PUBLIC
+        PkgConfig::GLIB
+        PkgConfig::GIO
+        )
+
+# Optionally, apply compile options from GLib and GIO. This might be necessary if
+# there are specific flags required for compilation, but often it can be omitted
+# if flags are standard or handled by the pkg-config imported targets.
 if(GLIB_CFLAGS_OTHER)
     target_compile_options(binc PUBLIC ${GLIB_CFLAGS_OTHER})
 endif()
